# zalupa-discord-bot

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
app/: app.py  health_check.py  logger.py  main_bot.py  settings.py  utils.py
app/cogs/: base.py  petuh_dialog.py
